<resources>
    <string name="app_name">Food Planner Project</string>
    <string name="usernameSignin">Sign in with Email</string>
    <string name="facebookSignin">Sign in with Facebook</string>
    <string name="googleSignin">Sign in with Google</string>
    <string name="dividerText">Don\'t Have an account ?</string>
    <string name="signUp">Sign Up with Email</string>
    <string name="guest">Continue as a guest</string>
    <string name="welcomeSyntx">Welcome Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="dontHaveAccount">Don\'t have an account? SignUp </string>
    <string name="searchBar">Search for recipes</string>
    <string name="recipeText">Recipes</string>
    <string name="weeklyPlan">Weekly plan</string>
    <string name="favourites">Favourites</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="featured_recipes">Featured Recipes</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="favorites">Favorites</string>
    <string name="welcome_msg">Welcome to ZMH ! No Hassle choosing Meals any more ^_^ </string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_welcome_message">Login to ZMH</string>
    <string name="email">E-mail</string>
    <string name="signup_welcome_msg">Sign up to ZMH</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="signup">Sign Up</string>
    <string name="meal_of_the_day">Meal of the Day</string>
    <string name="meal_name">Meal Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="ingredient_image">Ingredient Image</string>
    <string name="add_to_weekly_plan">Add to Weekly Plan</string>
    <string name="search_meals">Search meals...</string>
</resources>