<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/home_top_bar"
            app:title="Meal Info"
            app:titleTextColor="@color/accentColor" />

        <ImageView
            android:id="@+id/mealImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/mealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/mealCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ingredients_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/mealInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <WebView
            android:id="@+id/mealVideo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="381dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_favorites" />

        <Button
            android:id="@+id/btn_add_to_plan"
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_weekly_plan" />


    </LinearLayout>
</ScrollView>