<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".authentication.emailAuth.view.EmailLoginFragment" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:foreground="@drawable/authentication_gradient"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/email_login_image"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/accentColor"
        app:boxStrokeColor="@color/accentColor"
        app:cursorColor="@color/accentColor"
        app:endIconTint="@color/accentColor"
        app:helperTextTextColor="@color/accentColor"
        app:hintTextColor="@color/accentColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/accentColor"
            android:textColorLink="@color/accentColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/accentColor"
        app:boxStrokeColor="@color/accentColor"
        app:cursorColor="@color/accentColor"
        app:endIconTint="@color/accentColor"
        app:helperTextTextColor="@color/accentColor"
        app:hintTextColor="@color/accentColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/accentColor"
            android:textColorLink="@color/accentColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="7dp"
        android:fontFamily="casual"
        android:text="@string/login_welcome_message"
        android:textColor="@color/accentColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="38dp"
        android:backgroundTint="@color/buttonPrimary"
        android:text="@string/login"
        android:textColor="@color/accentColor"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>